5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1590_2894.log
== TEST (2019-03-20 15:04:04) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual o valor unitario do jogo? "))
jogo = j
# Calculo do valor a ser pago, incluindo o frete:
total = j * 8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogo = j
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:04:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual o valor unitario do jogo? "))
jogo = j
# Calculo do valor a ser pago, incluindo o frete:
total = j * 8 + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.167713
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 6, in <module>
    jogo = j
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:05:12) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
var=float(input("Qual o valor unitario do jogo? "))
total =  * 8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 9
    total =  * 8 + 45
            ^
SyntaxError: can't use starred expression here
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:06:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:

total ="Qual o valor unitario do jogo?"* 8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    total ="Qual o valor unitario do jogo?"* 8 + 45
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:06:23) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:

total ="Qual o valor unitario do jogo?"* 8 + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.12997
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 9, in <module>
    total ="Qual o valor unitario do jogo?"* 8 + 45
TypeError: Can't convert 'int' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:09:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:

total = var * 8 + 45

# Impressao do valor total:
print(total,var)
-- OUTPUT:
54.84 1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:09:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var=float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:

total = var * 8 + 45

# Impressao do valor total:
print(total,var)
-- EXECUTION TIME:
0.191153
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84 1.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0 356.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0 123987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:13:07) 
-- CODE:
jogos=float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:

total = jogos * 8 + 45

# Impressao do valor total:
print("Qual o valor unitario do jogo", total)
-- OUTPUT:
Qual o valor unitario do jogo 54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:15:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:

total = var * 8 + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.161795
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
